@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+esd_serverdir=@ESD_PC_DIR@
 
 Name: esound
 Description: esound
